--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 asgiref==3.5.2
 autopep8==2.0.0
-backports.zoneinfo==0.2.1
+backports.zoneinfo;python_version<"3.9"
 certifi==2022.12.7
 cffi==1.15.1
 charset-normalizer==2.1.1
