--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django-allauth==0.52.0
 django-countries==7.5
 django-crispy-forms==1.14.0
 django-filter==22.1
+gunicorn==20.1.0
 idna==3.4
 oauthlib==3.2.2
 Pillow==9.4.0
